# swevo_strat2_realcode

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: batch01_clustered_dev_broad_route_traj.csv  batch02_random_dev_broad_route_traj.csv  batch03_mixed_dev_broad_route_traj.csv  benchmark_inventory.csv  benchmark_inventory_repair_proposal.csv  budget_policy.yaml  experiment_manifest_demo.csv  experiment_manifest_dev_broad.csv  experiment_manifest_dev_broad_route_traj.csv  experiment_manifest_dev_compare.csv  experiment_manifest_full.csv  experiment_manifest_medium.csv  experiment_manifest_medium_pilot.csv  experiment_manifest_medium_quickcheck_route_traj.csv  experiment_manifest_micro.csv  experiment_manifest_paper_main3_real_blocked.csv  experiment_manifest_paper_main3_real_ready.csv  experiment_manifest_paper_main3_real_repair_proposal_blocked.csv  experiment_manifest_paper_main3_real_requested.csv  experiment_manifest_submission_full_real_requested.csv  experiment_manifest_tuning.csv  method_registry.yaml  metrics_schema.yaml  scenario_registry.csv  stats_plan.yaml
docs/: EXPERIMENT_SPLITS.md  LIVE_ADAPTER_CONTRACT.md  PERFORMANCE_FIRST_METHOD_NOTES.md  SUBMISSION_GATING_CHECKLIST.md
scripts/: aggregate_results.py  build_claim_evidence_map.py  build_claim_macros.py  build_latex_tables.py  check_benchmark_inventory.py  check_submission_gates.py  combine_master_runs.py  finalize_submission_state.py  generate_run_matrix.py  init_run_state.py  prepare_paper_run.py  propose_benchmark_repairs.py  resume_pending.py  run_manifest.py  run_stats.py  (+2 more)
(+95 files in other folders)
